chore: mock data and updated django version

--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "<4.0.0"
 graphene-django = "*"
 django-graphql-jwt = "==0.3.0"
 django-graphql-auth = "*"
