--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.13",
+		"codemirror": "^6.0.1",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
@@ -25,7 +26,10 @@
 		"tailwindcss": "^3.2.6",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"y-codemirror": "^3.0.1",
+		"y-websocket": "^1.4.5",
+		"yjs": "^13.5.45"
 	},
 	"type": "module"
 }
