--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@codemirror/lang-javascript": "^6.1.3",
+		"@codemirror/lang-python": "^6.1.1",
+		"@codemirror/theme-one-dark": "^6.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.13",
@@ -27,7 +30,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
-		"y-codemirror": "^3.0.1",
+		"xterm": "^5.1.0",
+		"y-codemirror.next": "^0.3.2",
 		"y-websocket": "^1.4.5",
 		"yjs": "^13.5.45"
 	},
