--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ authlib = "*"
 python-dotenv = "*"
 psycopg2 = "*"
 channels = "<4.0.0"
+ypy-websocket = "*"
+y-py = "*"
 
 [dev-packages]
 lorem = "*"
