--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,32 @@
 {
-  "manifest_version": 1,
-  "name": "CodeCollab",
-  "version": "1.0.0",
+  "name": "AmbienZZZzz",
+  "short_name": "AmbienZZZzz",
+  "start_url": "/",
+  "scope": "/",
+  "icons": [
+    {
+      "src": "maskableicon.png",
+      "sizes": "64x64",
+      "type":"image/png",
+      "purpose": "any maskable"
+  },
+  {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+  },
+  {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+  },
+  {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+  }
+  ],
+  "theme_color": "#fff19f",
+  "background_color": "#fff19f",
+  "display": "standalone"
 }
