--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@codemirror/lang-javascript": "^6.1.3",
-		"@codemirror/lang-python": "^6.1.1",
-		"@codemirror/theme-one-dark": "^6.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.13",
-		"codemirror": "^6.0.1",
+		"codemirror": "^5.65.11",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
@@ -26,18 +24,20 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-splitpanes": "^0.7.12",
 		"tailwindcss": "^3.2.6",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"xterm": "^5.1.0",
-		"y-codemirror.next": "^0.3.2",
 		"y-websocket": "^1.4.5",
 		"yjs": "^13.5.45"
 	},
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-static": "^2.0.1",
-		"xterm-addon-fit": "^0.7.0"
+		"marked": "^4.2.12",
+		"svelte-markdown": "^0.2.3",
+		"y-codemirror": "^3.0.1"
 	}
 }
