Add download button

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-static": "^2.0.1",
+		"jszip": "^3.10.1",
 		"marked": "^4.2.12",
+		"save-as": "^0.1.8",
 		"svelte-clipboard": "^1.0.0",
 		"svelte-markdown": "^0.2.3",
 		"y-codemirror": "^3.0.1"
