pivot: name change

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Watashiato",
+  "name": "Wasabi",
   "short_name": "wata",
   "theme_color": "#e74e35",
   "background_color": "#e74e35",
